metadata/force-app/main/default/objects/ccrz__E_CartItemGroup__c/fields/ccrz__Cart__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Cart__c</fullName>
    <description>The Cart that the Cart Item Group is associated with.</description>
    <label>CC Cart</label>
    <referenceTo>ccrz__E_Cart__c</referenceTo>
    <relationshipLabel>Cart Item Groups</relationshipLabel>
    <relationshipName>E_CartItemGroups</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>