metadata/force-app/main/default/objects/ccrz__E_CartItemGroup__c/fields/ccrz__Note__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Note__c</fullName>
    <description>The shipping note for this item group, if specified</description>
    <label>Note</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>