metadata/force-app/main/default/objects/ccrz__E_CartItemGroup__c/fields/ccrz__RequestDate__c.field-meta.xml
<CustomField>
    <fullName>ccrz__RequestDate__c</fullName>
    <description>The Requested Date for this Item Group, if specified</description>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>