metadata/force-app/main/default/objects/ccrz__E_CartItemGroup__c/fields/ccrz__ShipTo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Shipping Address for this item group</description>
    <label>Ship To</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>Cart Item Groups</relationshipLabel>
    <relationshipName>E_CartItemGroups</relationshipName>
    <type>Lookup</type>
</CustomField>